@@ -324,24 +324,28 @@ typedef test_suite::test_case_type test_case_type;
 #  define EXAM_RESULT __exam_counter
 #  define EXAM_CHECK(C) if ( !(C) ) { __exam_ts->report( __FILE__, __LINE__, false, #C );  __exam_counter |= 1; } else __exam_ts->report( __FILE__, __LINE__, true, #C )
 #  define EXAM_CHECK_ASYNC(C) if ( !(C) ) { exam::test_suite::report_async( __FILE__, __LINE__, false, #C ); } else exam::test_suite::report_async( __FILE__, __LINE__, true, #C )
+#  define EXAM_CHECK_ASYNC_F(C,V) if ( !(C) ) { exam::test_suite::report_async( __FILE__, __LINE__, false, #C ); V |= 1; } else exam::test_suite::report_async( __FILE__, __LINE__, true, #C )
 #  define EXAM_MESSAGE(M) __exam_ts->report( __FILE__, __LINE__, true, M )
 #  define EXAM_MESSAGE_ASYNC(M) exam::test_suite::report_async( __FILE__, __LINE__, true, M )
 #  define EXAM_REQUIRE(C) if ( !(C) ) { __exam_ts->report( __FILE__, __LINE__, false, #C );  return 1; } else __exam_ts->report( __FILE__, __LINE__, true, #C )
 #  define EXAM_FAIL(M) __exam_ts->report( __FILE__, __LINE__, false, M ); return 1
 #  define EXAM_ERROR(M) __exam_ts->report( __FILE__, __LINE__, false, M ); __exam_counter |= 1
 #  define EXAM_ERROR_ASYNC(M) exam::test_suite::report_async( __FILE__, __LINE__, false, M )
+#  define EXAM_ERROR_ASYNC_F(M,V) exam::test_suite::report_async( __FILE__, __LINE__, false, M ); V |= 1
 #else
 #  define EXAM_IMPL(F) F( exam::test_suite *, int )
 #  define EXAM_DECL(F) F( exam::test_suite *, int = 0 )
 #  define EXAM_RESULT 0
 #  define EXAM_CHECK(C) (C)
 #  define EXAM_CHECK_ASYNC(C) (C)
+#  define EXAM_CHECK_ASYNC_F(C,V) (C)
 #  define EXAM_MESSAGE(M)
 #  define EXAM_MESSAGE_ASYNC(M)
 #  define EXAM_REQUIRE(C) (C)
 #  define EXAM_FAIL(M)
 #  define EXAM_ERROR(M)
 #  define EXAM_ERROR_ASYNC(M)
+#  define EXAM_ERROR_ASYNC_F(M,V)
 #endif
 
 
